[gd_scene load_steps=5 format=3 uid="uid://cosek5as1b8s3"]

[ext_resource type="Script" uid="uid://btcs3jost0l0n" path="res://autoload/audio_manager.gd" id="1_u6vuv"]
[ext_resource type="AudioStream" uid="uid://bfn4wyya10duy" path="res://music/HoliznaCC0 - Mercury.mp3" id="2_q68eh"]
[ext_resource type="AudioStream" uid="uid://cxouounsydwr2" path="res://music/Justin Tuijl - Populationcull.mp3" id="3_0kjgv"]
[ext_resource type="AudioStream" uid="uid://devg1pwa2ixjg" path="res://music/Kirk Osamayo - Boss Fight.mp3" id="4_5l778"]

[node name="AudioManager" type="Node2D"]
script = ExtResource("1_u6vuv")
backgroundTracks = Array[AudioStream]([ExtResource("2_q68eh"), ExtResource("3_0kjgv"), ExtResource("4_5l778")])
effectVolume = -10

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[node name="EffectPlayer" type="Node2D" parent="."]

[connection signal="finished" from="BackgroundMusicPlayer" to="." method="_on_background_music_player_finished"]
